Ajout photo Jonathan

--- a/config.yaml
+++ b/config.yaml
@@ -57,6 +57,8 @@ params:
       photo: "/img/samperochkin.jpg"
     - name: "Philippe Blouin-Leclerc"
       photo: "/img/philbl.jpeg"
+    - name: "Jonathan Tremblay"
+      photo: "/img/jonathantremblay.jpg"
 
   # List of Partners
   Partners:
